opam-version: "2.0"
maintainer:   ["Mindy Preston"]
authors   :   ["Mindy Preston"]
homepage:     "https://github.com/mirage/charrua"
bug-reports:  "https://github.com/mirage/charrua/issues"
dev-repo:     "git+https://github.com/mirage/charrua.git"
tags:         [ "org:mirage"]
doc:          "https://docs.mirage.io"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "ocaml" {>= "4.04.2"}
  "charrua-client-lwt" {>= "1.0.0"}
  "ipaddr" {>= "3.0.0"}
  "mirage-random" {>= "1.0.0"}
  "mirage-clock"
  "mirage-time-lwt"
  "mirage-net-lwt" {>= "2.0.0"}
  "mirage-protocols-lwt" {>= "2.0.0"}
  "logs"
  "lwt"
]
synopsis: "A DHCP client for MirageOS"
description: """
`charrua-client-mirage` exposes an additional `Dhcp_client_mirage` for direct use
with the [MirageOS library operating system](https://github.com/mirage/mirage).
"""
