opam-version: "2.0"
maintainer:   ["Mindy Preston"]
authors   :   ["Mindy Preston"]
homepage:     "https://github.com/mirage/charrua"
bug-reports:  "https://github.com/mirage/charrua/issues"
dev-repo:     "git+https://github.com/mirage/charrua.git"
tags:         [ "org:mirage"]
doc:          "https://docs.mirage.io"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {>= "1.4.0"}
  "ocaml" {>= "4.06.0"}
  "charrua-client-lwt" {= version}
  "ipaddr" {>= "4.0.0"}
  "mirage-random" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-net" {>= "3.0.0"}
  "mirage-protocols" {>= "4.0.0"}
  "logs"
  "lwt" {>= "4.0.0"}
]
synopsis: "A DHCP client for MirageOS"
description: """
`charrua-client-mirage` exposes an additional `Dhcp_client_mirage` for direct use
with the [MirageOS library operating system](https://github.com/mirage/mirage).
"""
