opam-version: "2.0"
maintainer:   ["Mindy Preston"]
authors   :   ["Mindy Preston"]
homepage:     "https://github.com/mirage/charrua"
bug-reports:  "https://github.com/mirage/charrua/issues"
dev-repo:     "git+https://github.com/mirage/charrua.git"
tags:         [ "org:mirage"]
doc:          "https://docs.mirage.io"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "dune" {build & >= "1.0"}
  "ocaml" {>= "4.04.2"}
  "alcotest"     {with-test}
  "cstruct-unix" {with-test}
  "mirage-random-test" {with-test}
  "charrua" {>= "0.12.0"}
  "cstruct" {>="3.0.2"}
  "ipaddr"
  "macaddr"
]
synopsis: "DHCP client implementation"
description: """
charrua-client is a DHCP client powered by [charrua](https://github.com/mirage/charrua).

The base library exposes a simple state machine in `Dhcp_client`
for use in acquiring a DHCP lease.
"""
