opam-version: "2.0"
synopsis: "DHCP client implementation"
description: """\
charrua-client is a DHCP client powered by [charrua](https://github.com/mirage/charrua).

The base library exposes a simple state machine in `Dhcp_client`
for use in acquiring a DHCP lease."""
maintainer: "Mindy Preston"
authors: "Mindy Preston"
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/charrua"
doc: "https://docs.mirage.io"
bug-reports: "https://github.com/mirage/charrua/issues"
depends: [
  "dune" {>= "1.4.0"}
  "ocaml" {>= "4.08.0"}
  "alcotest" {with-test}
  "cstruct-unix" {with-test}
  "mirage-crypto-rng" {with-test & >= "1.2.0"}
  "charrua-server" {= version & with-test}
  "charrua" {= version}
  "cstruct" {>= "6.0.0"}
  "ipaddr" {>= "5.0.0"}
  "macaddr" {>= "4.0.0"}
  "mirage-crypto-rng-mirage" {>= "1.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mirage-time" {>= "2.0.0"}
  "mirage-net" {>= "3.0.0"}
  "randomconv" {>= "0.2.0"}
  "duration"
  "logs"
  "fmt"
  "ethernet" {>= "3.0.0"}
  "arp" {>= "3.0.0"}
  "tcpip" {>= "8.1.0"}
  "lwt" {>= "4.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/charrua.git"
