opam-version: "2.0"
name: "charrua-unix"
maintainer: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
authors: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
homepage: "https://github.com/haesbaert/charrua-unix"
bug-reports: "https://github.com/haesbaert/charrua-unix/issues"
license: "ISC"
dev-repo: "git+https://github.com/haesbaert/charrua-unix.git"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >="1.0+beta9"}
  "ocaml" {>= "4.03.0"}
  "lwt" {>="3.0.0"}
  "lwt_log"
  "charrua-core" {>= "0.10"}
  "cstruct-unix"
  "cmdliner"
  "rawlink"
  "tuntap" {>= "1.2.0"}
  "mtime" {>="1.0.0"}
]
synopsis: "Unix DHCP daemon"
description: """
charrua-unix is an _ISC-licensed_ Unix DHCP daemon based on
[charrua-core](http://www.github.com/mirage/charrua-core).
"""
