opam-version: "2.0"
synopsis: "Unix DHCP daemon"
description: """\
charrua-unix is an _ISC-licensed_ Unix DHCP daemon based on
[charrua](http://www.github.com/mirage/charrua)."""
maintainer: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
authors: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
license: "ISC"
homepage: "https://github.com/mirage/charrua"
bug-reports: "https://github.com/mirage/charrua/issues"
depends: [
  "dune" {>= "1.4.0"}
  "ocaml" {>= "4.08.0"}
  "lwt" {>= "3.0.0"}
  "lwt_log"
  "charrua" {= version}
  "charrua-server" {= version}
  "cstruct-unix"
  "cmdliner" {>= "1.1.0"}
  "rawlink-lwt" {>= "2.0"}
  "tuntap" {>= "2.0.0"}
  "mtime" {>= "1.0.0" & < "2.0.0"}
  "cstruct-lwt" {>= "6.0.0"}
  "ipaddr" {>= "5.1.0"}
  "tcpip" {>= "7.0.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/charrua.git"
