opam-version: "2.0"
maintainer: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
authors: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
license: "ISC"
homepage: "https://github.com/mirage/charrua"
bug-reports: "https://github.com/mirage/charrua/issues"
dev-repo: "git+https://github.com/mirage/charrua.git"
doc: "https://mirage.github.io/charrua/"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"         {>= "4.08.0"}
  "dune"          {>= "1.4.0"}
  "ppx_sexp_conv" {>="v0.10.0"}
  "ppx_cstruct"
  "cstruct"       {>= "3.0.1"}
  "sexplib"
  "ipaddr"        {>= "5.0.0"}
  "macaddr"       {>= "4.0.0"}
  "ipaddr-sexp"
  "macaddr-sexp"
  "ethernet"      {>= "2.2.0"}
  "tcpip"         {>= "5.0.0"}
]
synopsis: "DHCP wire frame encoder and decoder"
description: """
Charrua consists a single modules, `Dhcp_wire` responsible for parsing and
constructing DHCP messages

You can browse the API for [charrua](http://www.github.com/mirage/charrua) at
https://mirage.github.io/charrua/

#### Features

* `Dhcp_wire` provides marshalling and unmarshalling utilities for DHCP.
* Logic/sequencing is agnostic of IO and platform, so it can run on Unix as a
  process, as a Mirage unikernel or anything else.
* All DHCP options are supported at the time of this writing.
* Code is purely applicative.
* It's in OCaml, so it's pretty cool.

The name `charrua` is a reference to the, now extinct, semi-nomadic people of
southern South America.
"""
